@@ -1,6 +1,7 @@
 Change log for gfsm
 
 v0.0.10 Mon, 07 Jan 2008 12:52:04 +0100
+   + fixed an overflow bug in default gfsmio_getdelim() func
    + added at&t-style escaped-string paring function: gfsm_alphabet_att_string_to_labels()
      - wrapper:gfsm_alphabet_generic_string_to_labels()
        ~ choose character-wise or att-style parsing via 'att_mode' flag
